phf_macros/tests/compile-fail/bad-syntax.stderr
error: expected identifier
 --> $DIR/bad-syntax.rs:5:5
  |
5 |     => //~ ERROR expected identifier
  |     ^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/bad-syntax.rs`

For more information about this error, try `rustc --explain E0601`.
